# animal-detection

./: .gitignore  Dockerfile  app.py  detect_animals_v3.py  docker-compose.yaml  pyproject.toml
.github/workflows/: publish.yaml
