[tool.poetry]
name = "animal_detection"
version = "0.1.0"
description = ""
authors = ["Tom PIRE", "Mathis JOFFRE <mariusjoffre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
opencv-python = "^4.7.0.72"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"